feat: mobile design order summary, mobile design annual plan, mobile design proceed to payment

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="scss/main.scss">
   <title>ZAK | Order summary card</title>
 
@@ -15,18 +17,22 @@
   <main>
     <section>
 
-      Order Summary
+      <img src="../images/illustration-hero.svg" alt="illustration-hero">
+      <h3>Order Summary</h3>
 
-      You can now listen to millions of songs, audiobooks, and podcasts on any
-      device anywhere you like!
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!</p>
 
-      Annual Plan
-      $59.99/year
+      <div>
+        <img src="../images/icon-music.svg" alt="">
+        <p>Annual Plan <br>
+      $59.99/year</p>
+      <p>Change</p>
+      </div>
 
-      Change
-
-      Proceed to Payment
-      Cancel Order
+      <button>Proceed to Payment</button>
+      <p>Cancel Order</p>
+      
     </section>
   </main>
 
