mengerjakan annual plan

--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,16 @@
         device anywhere you like!</p>
 
       <div>
+        <div>
         <img src="../images/icon-music.svg" alt="">
         <p>Annual Plan <br>
       $59.99/year</p>
-      <p>Change</p>
+      </div>
+      <a href="">Change</a>
       </div>
 
-      <button>Proceed to Payment</button>
-      <p>Cancel Order</p>
+      <button type="button">Proceed to Payment</button>
+      <p class="cancel-order">Cancel Order</p>
       
     </section>
   </main>
