fix: desain annual plan

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="scss/main.scss">
   <title>ZAK | Order summary card</title>
 
@@ -25,16 +26,16 @@
 
       <div>
         <div>
-        <img src="../images/icon-music.svg" alt="">
-        <p>Annual Plan <br>
-      $59.99/year</p>
-      </div>
-      <a href="">Change</a>
+          <img src="../images/icon-music.svg" alt="">
+          <span>Annual Plan <br>
+            <span>$59.99/year</span></span>
+        </div>
+        <a href="">Change</a>
       </div>
 
       <button type="button">Proceed to Payment</button>
       <p class="cancel-order">Cancel Order</p>
-      
+
     </section>
   </main>
 
