feat: desain thank you

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
 <body>
 
   <main>
-    <section>
-
+    <!-- <section>
       <img src="../images/illustration-hero.svg" alt="illustration-hero">
       <h3>Order Summary</h3>
 
@@ -36,6 +35,12 @@
       <button type="button">Proceed to Payment</button>
       <p class="cancel-order">Cancel Order</p>
 
+    </section> -->
+
+    <section class="thank-you">
+      <img src="../images//spongebob-listening-to-music.webp" alt="spongebob-listening-to-music">
+      <p class="thank">Thank you for the order</p>
+      <button>Back to order summary </button>
     </section>
   </main>
 
