feat: menambahkan interaktifitas js

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="scss/main.scss">
+  <script src=".././script.js" defer></script>
   <title>ZAK | Order summary card</title>
 
 </head>
@@ -16,7 +17,7 @@
 <body>
 
   <main>
-    <!-- <section>
+    <section class ="order">
       <img src="../images/illustration-hero.svg" alt="illustration-hero">
       <h3>Order Summary</h3>
 
@@ -32,15 +33,15 @@
         <a href="">Change</a>
       </div>
 
-      <button type="button">Proceed to Payment</button>
+      <button type="button" class="button-proceed">Proceed to Payment</button>
       <p class="cancel-order">Cancel Order</p>
 
-    </section> -->
+    </section>
 
     <section class="thank-you">
       <img src="../images//spongebob-listening-to-music.webp" alt="spongebob-listening-to-music">
       <p class="thank">Thank you for the order</p>
-      <button>Back to order summary </button>
+      <button class="button-back">Back to order summary </button>
     </section>
   </main>
 
